--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <title>Ball</title>
 </head>
 <body>
-  <!--<canvas id="container"></canvas>-->
-  <script src="app.js"></script>
+  <div>Speed X: <span id="debug-speed-x"></span></div>
+  <div>Speed Y: <span id="debug-speed-y"></span></div>
+  <div>Acc X: <span id="debug-acc-x"></span></div>
+  <div>Acc Y: <span id="debug-acc-y"></span></div>
+
+  <script src="main.js"></script>
 </body>
 </html>
